--- a/app/views/settlement/viewinteractivedetails.html
+++ b/app/views/settlement/viewinteractivedetails.html
@@ -146,7 +146,7 @@
 					
 				</fieldset>	
 						
-		<div class="offset3">
+		<div class="pull-right">
 			<a href="#/gameevent/{{cId}}"><button type="reset" class="btn">Back</button></a>
 		</div>
 		
